Initial push for project 5

--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>React Boilerplate</title>
+	<title>Knowledge Crate</title>
 	<link rel="stylesheet" type="text/css" href="/public/styles/style.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 	<div id="app">
 	</div>
 	<script src="/public/scripts/app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.0.3/firebase.js"></script>
 </body>
 </html>
