--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<div id="app">
 	</div>
 	<script src="/public/scripts/app.js"></script>
+	<!-- installing firebase script -->
 	<script src="https://www.gstatic.com/firebasejs/5.0.3/firebase.js"></script>
 </body>
 </html>
